# xrpl-sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml
crates/xrpl-client/: CLAUDE.md  Cargo.toml
crates/xrpl-client/src/: CLAUDE.md  error.rs  http.rs  lib.rs  ws.rs  ws_wasm.rs
crates/xrpl-client/src/types/: mod.rs
crates/xrpl-core/: CLAUDE.md  Cargo.toml
crates/xrpl-core/src/: address.rs  error.rs  lib.rs  wasm_bindgen_exports.rs
crates/xrpl-core/src/codec/: amount.rs  decode.rs  definitions.rs  encode.rs  field.rs  mod.rs
crates/xrpl-core/src/crypto/: CLAUDE.md  ed25519.rs  mod.rs  secp256k1.rs  signing.rs
crates/xrpl-core/src/transaction/: common.rs  mod.rs  types.rs
crates/xrpl-core/src/transaction/builders/: account_set.rs  amm.rs  check.rs  clawback.rs  delegate_set.rs  escrow.rs  mod.rs  nft.rs  offer.rs  payment.rs  payment_channel.rs  set_regular_key.rs  signer_list.rs  trust_set.rs
crates/xrpl-core/src/types/: account_id.rs  amount.rs  blob.rs  currency.rs  hash.rs  mod.rs
crates/xrpl-core/src/utils/: dex.rs  mod.rs  reserve.rs
crates/xrpl-core/tests/: codec_fixtures.rs
crates/xrpl-sdk/: CLAUDE.md  Cargo.toml
crates/xrpl-sdk/examples/: check_balance.rs  decode_blob.rs  mint_nft.rs  place_offer.rs  send_payment.rs  subscribe_ledger.rs
crates/xrpl-sdk/src/: lib.rs  wallet.rs
docs/: ARCHITECTURE.md  CHECKLIST.md  CLIENT_HTTP.md  CLIENT_WS.md  CODEC.md  CRYPTO.md  ERRORS.md  TESTING.md  TRANSACTIONS.md  TYPES.md
examples/browser/: index.html
examples/cloudflare-worker/: Cargo.toml  wrangler.toml
examples/cloudflare-worker/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_address.rs  fuzz_amount.rs  fuzz_decode.rs  fuzz_encode.rs
scripts/: build_wasm.sh
