[workspace]
resolver = "2"
members = [
    "crates/xrpl-core",
    "crates/xrpl-client",
    "crates/xrpl-sdk",
]
exclude = ["fuzz"]

[workspace.dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = "1"
thiserror = { version = "2", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
sha2 = { version = "0.11", default-features = false }
ripemd = "0.1"
hmac = "0.12"
rand = "0.9"
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
k256 = { version = "0.13", features = ["ecdsa"] }
futures = "0.3"
tracing = "0.1"
zeroize = { version = "1", features = ["derive", "alloc"] }
subtle = "2"
