[package]
name = "xrpl-fuzz"
version = "0.0.1"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
xrpl-core = { path = "../crates/xrpl-core" }
serde_json = "1"

[[bin]]
name = "fuzz_decode"
path = "fuzz_targets/fuzz_decode.rs"
test = false
doc = false

[[bin]]
name = "fuzz_address"
path = "fuzz_targets/fuzz_address.rs"
test = false
doc = false

[[bin]]
name = "fuzz_encode"
path = "fuzz_targets/fuzz_encode.rs"
test = false
doc = false

[[bin]]
name = "fuzz_amount"
path = "fuzz_targets/fuzz_amount.rs"
test = false
doc = false
